[gd_scene load_steps=2 format=3 uid="uid://thqkgr28nn37"]

[ext_resource type="Script" uid="uid://g1vm7k0oaim" path="res://Scenes/UI/setting_toggle.gd" id="1_qumuf"]

[node name="SettingToggle" type="Control"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qumuf")

[node name="SettingLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_right = 73.0
offset_bottom = 23.0
text = "Dithering"

[node name="SettingCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.0
offset_right = 12.0
offset_bottom = 24.0
grow_horizontal = 2

[node name="SubLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 261.0
grow_vertical = 0
text = "(Disable to improve performance)"
horizontal_alignment = 1
vertical_alignment = 1
